# robotics-final

./: CMakeLists.txt  README.md  coords.txt  package.xml
config/: mission.yaml
launch/: demo.launch  nav.launch  sim.launch  slam.launch  task_manager.launch
maps/: house_map.pgm  house_map.yaml
models/kitchen/: model.config  model.sdf
models/kitchen/materials/scripts/: kitchen.material
src/: manager_task_pre_QR.py  qr_reader.py  task_manager.py
